# Calculator-CLI

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  deploy.py  pyproject.toml  requirements.txt  run_cli.py  setup.py
.github/workflows/: build-release.yml  build_test_C_code.yml  build_test_python_code.yml  precommit.yml  superlinter.yml
c_src/: calculate.c  calculate.h  calculatePythonWrapper.h  calculate_c.h  main.c
cmake/: python_install.cmake
docs/source/: c_api.rst  conf.py  index.rst
python/: __init__.py  cli.py
scripts/: format_c_code.sh
tests_c/: calculateTest.c
tests_c/Unity/: unity.c  unity.h  unity_internals.h
tests_py/: calculate_test.py
web-cli/: package-lock.json  package.json  server.js
web-cli/public/: client.js  index.html
web-cli/public/docs/: .buildinfo  c_api.html  docs.html  genindex.html  objects.inv  python_api.html  search.html  searchindex.js  usage.html
web-cli/public/docs/_sources/: python_api.rst.txt  usage.rst.txt
