# filepath: d:\Gam3a\GP\assessment\calculator_cli\pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Keep metadata minimal as it's also in setup.py
[project]
name = "calculator-cli"
version = "1.0.0"
description = "A cross-platform calculator with C backend and Python interface"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

# We mark entry-points as dynamic because they're specified in setup.py
dynamic = ["entry-points"]